log
Thu Apr  7 16:11:12 UTC 2022: 
 hashmap.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  4|5
total_score: 20/70
be2d0af
Thu Apr  7 16:13:19 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
524ab7a
Thu Apr  7 16:14:30 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
f2e5597
Sat Apr  9 04:35:39 UTC 2022: 
 hashmap.c | 41 +++++++++++++++++++++++++++++++----------
 1 file changed, 31 insertions(+), 10 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:61:13: error: unused variable ‘oldBuck’ [-Werror=unused-variable]
     Pair ** oldBuck = map->buckets;
             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6b49d23
Sat Apr  9 04:42:15 UTC 2022: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
eec264a
Sat Apr  9 04:43:03 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
3757fe6
Sat Apr  9 04:48:15 UTC 2022: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
c4b88cd
